feat: fix name label

--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -27,7 +27,7 @@ FROM python:${PYTHON_VERSION}-slim
 # TODO: Add `build-date` and `version`
 LABEL maintainer="ApeWorX" \
       org.label-schema.schema-version="2.0" \
-      org.label-schema.name="ape-slim" \
+      org.label-schema.name="ape" \
       org.label-schema.description="Ape Ethereum Framework." \
       org.label-schema.url="https://docs.apeworx.io/ape/stable/" \
       org.label-schema.usage="https://docs.apeworx.io/ape/stable/userguides/quickstart.html#via-docker" \
