feat: add cache build and build args

--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -4,7 +4,7 @@
 
 ARG PYTHON_VERSION="3.11"
 
-FROM python:${PYTHON_VERSION} as builder
+FROM python:${PYTHON_VERSION} AS builder
 
 WORKDIR /wheels
 
