--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -19,14 +19,19 @@ FROM python:${PYTHON_VERSION}-slim
 
 # See http://label-schema.org for metadata schema
 # TODO: Add `build-date` and `version`
-LABEL maintainer="ApeWorX" \
-      org.label-schema.schema-version="2.0" \
-      org.label-schema.name="ape" \
-      org.label-schema.description="Ape Framework." \
-      org.label-schema.url="https://apeworx.io/framework" \
-      org.label-schema.usage="https://docs.apeworx.io/ape/stable/userguides/quickstart.html\#via-docker" \
-      org.label-schema.vcs-url="https://github.com/ApeWorX/ape" \
-      org.label-schema.docker.cmd="docker run --volume $PWD:/home/harambe/project --workdir /home/harambe/project apeworx/ape run my_script.py"
+LABEL org.opencontainers.image.title="ape" \
+    org.opencontainers.image.description="Ape Framework" \
+    org.opencontainers.image.url="https://apeworx.io/framework" \
+    org.opencontainers.image.documentation="https://docs.apeworx.io/ape/stable/userguides/quickstart.html\#installation" \
+    org.opencontainers.image.source="https://github.com/ApeWorX/ape" \
+    org.opencontainers.image.vendor="ApeWorX" \
+    org.opencontainers.image.licenses="Apache-2.0" \
+    org.opencontainers.image.version="${VERSION:-latest}" \
+    org.opencontainers.image.created="${BUILD_DATE}" \
+    org.opencontainers.image.revision="${VCS_REF}" \
+    org.opencontainers.image.authors="ApeWorX" \
+    org.opencontainers.image.base.name="python:${PYTHON_VERSION}-slim"
+
 
 RUN useradd --create-home --shell /bin/bash harambe
 COPY --from=builder /wheels/*.whl /wheels/
